--- a/_pgbackup/index_1624709682.html
+++ b/_pgbackup/index_1624709682.html
@@ -17,7 +17,7 @@
             <p class="device-notification--message">Global has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p> 
         </div>         
         <div class="perspective effect-rotate-left"> 
-            <div class="container"> 
+            <div class="container">
                 <div class="outer-nav--return"></div>                 
                 <div id="viewport" class="l-viewport"> 
                     <div class="l-wrapper"> 
@@ -30,27 +30,46 @@
                         </header>                         
                         <nav class="l-side-nav"> 
                             <ul class="side-nav"> 
-                                <li class="is-active"> 
-                                    <span>Home</span> 
+                                <li class="is-active">
+                                    <span>Home</span>
                                 </li>                                 
-                                <li> 
-                                    <span>Sobre</span> 
+                                <li>
+                                    <span>Works</span>
                                 </li>                                 
-                                <li> 
-                                    <span>Indicadores</span> 
+                                <li>
+                                    <span>About</span>
                                 </li>                                 
-                                <li> 
-                                    <span>Dados</span> 
+                                <li>
+                                    <span>Contact</span>
                                 </li>                                 
-                                <li> 
-                                    <span>Contate</span> 
+                                <li>
+                                    <span>Hire us</span>
                                 </li>                                 
                             </ul>                             
                         </nav>                         
                         <ul class="l-main-content main-content"> 
                             <li class="l-section section section--is-active"> 
                                 <div class="intro"> 
-                                    <img src="assets/img/logos/horizontal%20white.png" width="840">                                      
+                                    <img src="assets/img/logos/horizontal%20white.png" width="840">
+                                    <div class="intro--banner"> 
+                                        <h1></h1>
+                                        <button class="cta">App store
+                                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve"> 
+                                                <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)"> 
+                                                    <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/> 
+                                                </g>                                                 
+                                            </svg>                                             
+                                            <span class="btn-background"></span> 
+                                        </button>
+                                        <button class="cta">Google Play 
+                                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve"> 
+                                                <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)"> 
+                                                    <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/> 
+                                                </g>                                                 
+                                            </svg>                                             
+                                            <span class="btn-background"></span> 
+                                        </button>
+                                    </div>                                     
                                     <div class="intro--options"> 
                                         <a href="#0"> <h3>O aplicativo </h3> <p>Digitalizando o código do produto, o usuário identifica a loja onde está comprando e o aplicativo fornece informações públicos sobre a origem e o riscos associados ao produto </p> </a> 
                                         <a href="#0"> <h3>Uma ferramenta de transparência</h3> <p><b>Divulgar</b> a origem e o impacto da carne bovina consumida no Brasil, possibilitando escolhas mais bem informadas. <b>Aumentar</b> a responsabilidade dos frigorificos e das redes varejistas sobre seus produtos</p> </a> 
@@ -126,14 +145,14 @@
                                                 <a href="tel:+148126287560">+48 12 628 75 60</a> 
                                             </div>                                             
                                             <ul class="modal--options"> 
-                                                <li> 
-                                                    <a href="#0">Bēhance</a> 
+                                                <li>
+                                                    <a href="#0">Bēhance</a>
                                                 </li>                                                 
-                                                <li> 
-                                                    <a href="#0">dribbble</a> 
+                                                <li>
+                                                    <a href="#0">dribbble</a>
                                                 </li>                                                 
-                                                <li> 
-                                                    <a href="mailto:ouremail@gmail.com">Contact Us</a> 
+                                                <li>
+                                                    <a href="mailto:ouremail@gmail.com">Contact Us</a>
                                                 </li>                                                 
                                             </ul>                                             
                                         </div>                                         
