--- a/_pgbackup/index_1624714429.html
+++ b/_pgbackup/index_1624714429.html
@@ -60,7 +60,6 @@
                 <div class="row">
                     <div class="col-sm-7">
                         <div class="header-content">
-                            <img width="1000" src="img/logos/darktransparent.png"/>
                             <div class="header-content-inner">
                                 <h1>Um aplicativo para aumentar transparência sobre a produção, apoiar o consumo consciente de carne, e mapear o fluxo de carne no mercado domestico</h1>
                                 <a href="#download" class="btn btn-outline btn-xl page-scroll">Baixa agora o aplicativo</a>
@@ -85,12 +84,12 @@
                 </div>
             </div>
         </header>
-        <section id="download" class="bg-primary download text-center text-muted">
+        <section id="download" class="download bg-primary text-center">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h2 class="section-heading">Por um setor da carne mais responsável!</h2>
-                        <p>O aplicativo está disponível nas versões Android e IOS</p>
+                        <h2 class="section-heading">Discover what all the buzz is about!</h2>
+                        <p>Our app is available on any mobile device! Download now to get started!</p>
                         <div class="badges">
                             <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
                             <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
