fim pagina intro

--- a/_pgbackup/index_1624716762.html
+++ b/_pgbackup/index_1624716762.html
@@ -60,8 +60,9 @@
                 <div class="row">
                     <div class="col-sm-7">
                         <div class="header-content">
+                            <img width="1000" src="img/logos/darktransparent.png" class="img-responsive"/>
                             <div class="header-content-inner">
-                                <h1>Um aplicativo criado para aumentar transparência na produção e apoiar o consumo consciente da carne brasileira</h1>
+                                <h1>Um aplicativo para aumentar transparência sobre a produção, apoiar o consumo consciente de carne, e mapear o fluxo de carne no mercado domestico</h1>
                                 <a href="#download" class="btn btn-outline btn-xl page-scroll">Baixa agora o aplicativo</a>
                             </div>
                         </div>
