--- a/_pgbackup/index_1624723300.html
+++ b/_pgbackup/index_1624723300.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>New Age - Start Bootstrap Theme</title>
+        <title>Do Pasto ao Prato</title>
         <!-- Bootstrap Core CSS -->
         <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom Fonts -->
@@ -61,7 +61,7 @@
                     <div class="col-sm-7">
                         <div class="header-content">
                             <div class="header-content-inner">
-                                <h1>Um aplicativo para aumentar transparência sobre a produção, apoiar o consumo consciente de carne, e mapear o fluxo de carne no mercado domestico</h1>
+                                <h1>Um aplicativo criado para aumentar a transparência na cadeia da carne e apoiar o consumo consciente no Brasil</h1>
                                 <a href="#download" class="btn btn-outline btn-xl page-scroll">Baixa agora o aplicativo</a>
                             </div>
                         </div>
@@ -72,7 +72,7 @@
                                 <div class="device">
                                     <div class="screen">
                                         <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                        <img src="img/WireFrame_1.png" class="img-responsive" alt="" width="500">
+                                        <img src="img/Imagens/WireFrame_1.png" class="img-responsive" alt="" width="500">
                                     </div>
                                     <div class="button">
                                         <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -91,8 +91,8 @@
                         <h2 class="section-heading">Por um setor da carne mais responsável!</h2>
                         <p>O aplicativo está disponível nas versões Android e IOS</p>
                         <div class="badges">
-                            <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-                            <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
+                            <a class="badge-link" href="#"><img src="img/icones/google-play-badge.svg" alt=""></a>
+                            <a class="badge-link" href="#"><img src="img/icones/app-store-badge.svg" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -103,8 +103,8 @@
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <div class="section-heading">
-                            <h2>Unlimited Features, Unlimited Fun</h2>
-                            <p class="text-muted">Check out what you can do with this app theme!</p>
+                            <h2>Indicadores de risco e legalidade</h2>
+                            <a href="http://resources.trase.earth/documents/metodo_do_pasto_ao_prato.pdf"> Clique aqui para mais detalhes sobre o método </a>
                             <hr>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
                                 <div class="device">
                                     <div class="screen">
                                         <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                                        <img src="img/demo-screen-1.jpg" class="img-responsive" alt=""> 
+                                        <img src="img/Imagens/WireFrame_1.png" class="img-responsive" alt=""> 
                                     </div>
                                     <div class="button">
                                         <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -130,32 +130,32 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="feature-item">
-                                        <i class="icon-screen-smartphone text-primary"></i>
-                                        <h3>Device Mockups</h3>
-                                        <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                                        <img src="img/icones/deforestation%20(1).png" width="200" height="180"/>
+                                        <h3>Desmatamento</h3>
+                                        <p class="text-muted">Área desmatada para pastagem na zona de compras dos frigoríficos entre 2016 e 2019 </p>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="feature-item">
-                                        <i class="icon-camera text-primary"></i>
-                                        <h3>Flexible Use</h3>
-                                        <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
+                                        <img src="img/icones/document.png" width="200" height="180"/>
+                                        <h3>Inspeção sanitária</h3>
+                                        <p class="text-muted">Número de multas pagas por cada frigorífico entre 2016 e 2019, segundo dados oficiais do Ministério da Agricultura, Pecuária e Abastecimento </p>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="feature-item">
-                                        <i class="icon-present text-primary"></i>
-                                        <h3>Free to Use</h3>
-                                        <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+                                        <img src="img/icones/forest.png" width="200" height="180"/>
+                                        <h3>Queimadas</h3>
+                                        <p class="text-muted">Área total queimada na zona de compra de cada frigorífico entre 2016 e 2019. Dados do MODIS publicados pelo INPE </p>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="feature-item">
-                                        <i class="icon-lock-open text-primary"></i>
-                                        <h3>Open Source</h3>
-                                        <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
+                                        <img src="img/icones/surface1.png" width="200" height="180"/>
+                                        <h3>Trabalho escravo</h3>
+                                        <p class="text-muted">Número de fazendas que são parte da cadeia de fornecimento dos frigoríficos e que foram autuadas pelo Ministério Público Federal (MPF) entre 2016 e 2019</p>
                                     </div>
                                 </div>
                             </div>
@@ -167,15 +167,15 @@
         <section class="cta">
             <div class="cta-content">
                 <div class="container">
-                    <h2>Stop waiting.<br>Start building.</h2>
-                    <a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
+                    <h2>Um banco de dados inédito conectando frigoríficos aos mercados varejistas</h2>
+                    <a href="#contact" class="btn btn-outline btn-xl page-scroll">Em breve</a>
                 </div>
             </div>
             <div class="overlay"></div>
         </section>
         <section id="contact" class="contact bg-primary">
             <div class="container">
-                <h2>We <i class="fa fa-heart"></i> new friends!</h2>
+                <h2>Siga nossas redes socias</h2>
                 <ul class="list-inline list-social">
                     <li class="social-twitter">
                         <a href="#"><i class="fa fa-twitter"></i></a>
@@ -183,26 +183,15 @@
                     <li class="social-facebook">
                         <a href="#"><i class="fa fa-facebook"></i></a>
                     </li>
-                    <li class="social-google-plus">
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                    <li class="social-instagram">
+                        <a href="#"><i class="fa fa-instagram"></i></a>
                     </li>
                 </ul>
             </div>
         </section>
         <footer>
             <div class="container">
-                <p>&copy; 2016 Start Bootstrap. All Rights Reserved.</p>
-                <ul class="list-inline">
-                    <li>
-                        <a href="#">Privacy</a>
-                    </li>
-                    <li>
-                        <a href="#">Terms</a>
-                    </li>
-                    <li>
-                        <a href="#">FAQ</a>
-                    </li>
-                </ul>
+                <p>Do pasto ao prato <br> &copy; 2016 Start Bootstrap. All Rights Reserved.</p>
             </div>
         </footer>
         <!-- jQuery -->
