--- a/_pgbackup/index_1624723921.html
+++ b/_pgbackup/index_1624723921.html
@@ -47,7 +47,7 @@
                             <a class="page-scroll" href="#features">O aplicativo</a> 
                         </li>                         
                         <li> 
-                            <a class="page-scroll" href="#contact">Redes sociais</a> 
+                            <a class="page-scroll" href="#contact">Contact</a> 
                         </li>                         
                     </ul>                     
                 </div>                 
@@ -62,7 +62,7 @@
                         <div class="header-content"> 
                             <div class="header-content-inner"> 
                                 <h1>Um aplicativo criado para aumentar a transparência na cadeia da carne e apoiar o consumo consciente no Brasil</h1> 
-                                <a href="#download" class="btn btn-outline btn-xl page-scroll">Baixe agora o aplicativo</a> 
+                                <a href="#download" class="btn btn-outline btn-xl page-scroll">Baixa agora o aplicativo</a> 
                             </div>                             
                         </div>                         
                     </div>                     
