cor e ajustes menores

--- a/_pgbackup/index_1624818023.html
+++ b/_pgbackup/index_1624818023.html
@@ -88,7 +88,7 @@
             <div class="container"> 
                 <div class="row"> 
                     <div class="col-md-8 col-md-offset-2"> 
-                        <h2 class="section-heading">Comece aqui a contribuir para um setor mais transparente</h2> 
+                        <h2 class="section-heading">Por um setor da carne mais responsável!</h2> 
                         <p>O aplicativo está disponível nas versões Android e IOS</p> 
                         <div class="badges"> 
                             <a class="badge-link" href="#"><img src="img/icones/google-play-badge.svg" alt=""></a> 
@@ -103,7 +103,7 @@
                 <div class="row"> 
                     <div class="col-lg-12 text-center"> 
                         <div class="section-heading"> 
-                            <h2>Indicadores de risco e de ilegalidade</h2> 
+                            <h2>Indicadores de risco e legalidade</h2> 
                             <a href="http://resources.trase.earth/documents/metodo_do_pasto_ao_prato.pdf"> Clique aqui para mais detalhes sobre o método </a> 
                             <hr> 
                         </div>                         
@@ -167,7 +167,7 @@
         <section class="cta"> 
             <div class="cta-content"> 
                 <div class="container"> 
-                    <h2>Um banco de dados inédito, conectando frigoríficos aos mercados varejistas</h2> 
+                    <h2>Um banco de dados inédito conectando frigoríficos aos mercados varejistas</h2> 
                     <a href="#contact" class="btn btn-outline btn-xl page-scroll">Em breve</a> 
                 </div>                 
             </div>             
