--- a/_pgbackup/index_1624818154.html
+++ b/_pgbackup/index_1624818154.html
@@ -88,7 +88,7 @@
             <div class="container"> 
                 <div class="row"> 
                     <div class="col-md-8 col-md-offset-2"> 
-                        <h2 class="section-heading">Comece aqui a contribuir para um setor mais transparente</h2> 
+                        <h2 class="section-heading">Por um setor mais responsável!</h2> 
                         <p>O aplicativo está disponível nas versões Android e IOS</p> 
                         <div class="badges"> 
                             <a class="badge-link" href="#"><img src="img/icones/google-play-badge.svg" alt=""></a> 
