adding faq, fixing colors, adding social network

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
                         </li>                         
                         <li> 
                             <a class="page-scroll" href="#contact">Redes sociais</a> 
-                        </li>                         
+                        </li>   
+                        <li>
+                            <a class="nav-link" href="faq.html">FAQs</a>
+                        </li>                   
                     </ul>                     
                 </div>                 
                 <!-- /.navbar-collapse -->                 
@@ -72,7 +75,7 @@
                                 <div class="device"> 
                                     <div class="screen"> 
                                         <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->                                         
-                                        <img src="img/Imagens/WireFrame_1.png" class="img-responsive" alt="" width="500"> 
+                                        <img src="img/Imagens/masterboi_screenshot.png" class="img-responsive" alt="" width="500"> 
                                     </div>                                     
                                     <div class="button"> 
                                         <!-- You can hook the "home button" to some JavaScript events or just remove it -->                                         
@@ -91,8 +94,8 @@
                         <h2 class="section-heading">Comece aqui a contribuir para um setor mais transparente</h2> 
                         <p>O aplicativo está disponível nas versões Android e IOS</p> 
                         <div class="badges"> 
-                            <a class="badge-link" href="#"><img src="img/icones/google-play-badge.svg" alt=""></a> 
-                            <a class="badge-link" href="#"><img src="img/icones/app-store-badge.svg" alt=""></a> 
+                            <a class="badge-link" href="#"><img src="img/icones/disponivel-google-play-badge.png" alt=""></a> 
+                            <a class="badge-link" href="#"><img src="img/icones/appstore_breve.png" alt=""></a> 
                         </div>                         
                     </div>                     
                 </div>                 
@@ -116,7 +119,7 @@
                                 <div class="device"> 
                                     <div class="screen"> 
                                         <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->                                         
-                                        <img src="img/Imagens/WireFrame_1.png" class="img-responsive" alt=""> 
+                                        <img src="img/Imagens/masterboi_screenshot.png" class="img-responsive" alt=""> 
                                     </div>                                     
                                     <div class="button"> 
                                         <!-- You can hook the "home button" to some JavaScript events or just remove it -->                                         
@@ -178,20 +181,20 @@
                 <h2>Siga nossas redes socias</h2> 
                 <ul class="list-inline list-social"> 
                     <li class="social-twitter"> 
-                        <a href="#"><i class="fa fa-twitter"></i></a> 
+                        <a href="https://twitter.com/dopastoaoprato"><i class="fa fa-twitter"></i></a> 
                     </li>                     
                     <li class="social-facebook"> 
                         <a href="#"><i class="fa fa-facebook"></i></a> 
                     </li>                     
                     <li class="social-instagram"> 
-                        <a href="#"><i class="fa fa-instagram"></i></a> 
+                        <a href="https://www.instagram.com/_dopastoaoprato/"><i class="fa fa-instagram"></i></a> 
                     </li>                     
                 </ul>                 
             </div>             
         </section>         
         <footer> 
             <div class="container"> 
-                <p>Do pasto ao prato <br> &copy; 2016 Start Bootstrap. All Rights Reserved.</p> 
+                <p>Do pasto ao prato <br> &copy; 2021 All Rights Reserved.</p> 
             </div>             
         </footer>         
         <!-- jQuery -->         
