--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <span class="sr-only">Toggle navigation</span> Menu 
                         <i class="fa fa-bars"></i> 
                     </button>                     
-                    <a class="navbar-brand page-scroll" href="#page-top">Do Pasto ao Prato</a> 
+                    <a class="navbar-brand page-scroll" href="#page-top" style="color: #40474e;">Do Pasto ao Prato</a>
                 </div>                 
                 <!-- Collect the nav links, forms, and other content for toggling -->                 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
@@ -45,7 +45,10 @@
                         </li>                         
                         <li> 
                             <a class="page-scroll" href="#features">O aplicativo</a> 
-                        </li>                         
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="#bd">Banco de dados</a>
+                        </li>                            
                         <li> 
                             <a class="page-scroll" href="#contact">Redes sociais</a> 
                         </li>   
@@ -167,11 +170,11 @@
                 </div>                 
             </div>             
         </section>         
-        <section class="cta"> 
+        <section id="bd" class="cta"> 
             <div class="cta-content"> 
                 <div class="container"> 
                     <h2>Um banco de dados inédito, conectando frigoríficos aos mercados varejistas</h2> 
-                    <a href="#contact" class="btn btn-outline btn-xl page-scroll">Em breve</a> 
+                    <a href="bd.html" class="btn btn-outline btn-xl page-scroll">Em breve</a> 
                 </div>                 
             </div>             
             <div class="overlay"></div>             
@@ -184,7 +187,7 @@
                         <a href="https://twitter.com/dopastoaoprato"><i class="fa fa-twitter"></i></a> 
                     </li>                     
                     <li class="social-facebook"> 
-                        <a href="#"><i class="fa fa-facebook"></i></a> 
+                        <a href="https://www.facebook.com/dopastoaoprato"><i class="fa fa-facebook"></i></a> 
                     </li>                     
                     <li class="social-instagram"> 
                         <a href="https://www.instagram.com/_dopastoaoprato/"><i class="fa fa-instagram"></i></a> 
