--- a/faq.html
+++ b/faq.html
@@ -45,13 +45,13 @@
                         </li>                         
                         <li> 
                             <a class="nav-link" href="index.html">O aplicativo</a> 
-                        </li>                         
-                        <li> 
-                            <a class="nav-link" href="index.html">Redes sociais</a> 
                         </li>   
 						<li>
                             <a class="nav-link" href="bd.html">Banco de dados</a>
-                        </li>  
+                        </li>                           
+                        <li> 
+                            <a class="nav-link" href="index.html">Redes sociais</a> 
+                        </li>
                         <li>
                             <a class="nav-link" href="faq.html">FAQs</a>
                         </li>                   
@@ -77,32 +77,23 @@
 										SOBRE O PROJETO
 									</h4><br>
 								</div>
-								<!-- Get Started Accordion -->
 								<div id="gstAccordion" data-children=".item">
-								<!-- Accordion Item 01 -->
-								<div class="item">
-									<div class="btn btn-s btn-outline">
-										<h3 data-toggle="collapse" data-parent="#gstAccordion" href="#gstAccordion2">
-											Qual é a meta do DO PASTO AO PRATO?
-										</h3>
-									</div>
-									<div id="gstAccordion2" class="collapse accordion-block">
-										<p>
+								<main>
+  									<details>
+											<summary> Qual é a meta do DO PASTO AO PRATO?</summary>
+										<div class="faq__content">
+											<p>
 											Nosso sonho é construir ferramentas que revelem de onde vem a sua comida, e, por meio de iniciativas colaborativas, melhorar a transparência das cadeias de abastecimento no Brasil e no mundo. <br><br>
 											Dispondo de mais informações, setores privados, públicos e da sociedade civil poderão desenhar ações e intervenções mais efetivas. Construiremos juntos uma cadeia de alimentos mais ética e sustentável.
-										</p>
-									</div>
-								</div>
-								<br>
-								<!-- Accordion Item 02 -->
-								<div class="item">
-									<div class="btn btn-s btn-outline">
-										<h3 data-toggle="collapse" data-parent="#gstAccordion" href="#gstAccordion3">
-											Como funciona o aplicativo?
-										</h3>
-									</div>
-									<div id="gstAccordion3" class="collapse accordion-block">
-										<p>
+											</p>
+										</div>
+									</details>
+								</main>
+								<main>
+  									<details>
+											<summary> Qual é a meta do DO PASTO AO PRATO?</summary>
+										<div class="faq__content">
+											<p>
 											O aplicativo DO PASTO AO PRATO é uma ferramenta de transparência e um projeto de ciência cidadã.<br> 
 											Ao digitar o código contido no selo de um produto de carne no supermercado você:
 											<li>recebe informações sobre a origem daquele produto e indicadores sobre as práticas associadas à empresa ou à sua área de atuação, tornando-se um consumidor mais capacitado a fazer escolhas sobre os melhores produtos de acordo com nossos indicadores socioambientalmente responsáveis; </li>
@@ -111,124 +102,94 @@
 											<p>Estas informações são importantes para:</p>
 											<li>esclarecer ao consumidor os impactos negativos que produtos de carne trazem consigo desde sua produção até chegarem às prateleiras do mercado;</li>
 											<li>aumentar a responsabilidade de varejistas e frigoríficos sobre a carne que comercializam.</li>
-										</p>
-									</div>
-								</div>
-								<br>
-								<!-- Accordion Item 03 -->
-								<div class="item">
-									<div class="btn btn-s btn-outline">
-										<h3 data-toggle="collapse" data-parent="#gstAccordion" href="#gstAccordion4">
-											Por que a transparência na cadeia produtiva da carne é relevante?
-										</h3>
-									</div>
-									<div id="gstAccordion4" class="collapse accordion-block">
-										<p>
-											<b>De onde vem a carne que você come?</b> <br>
-											O setor da pecuária ainda é culpado pelo desmatamento, queimadas, trabalho escravo e casos de má higiene e bem estar animal. <br>
-											Estes danos são escondidos do consumidor por cadeias de abastecimento complexas, impedindo o avanço de um consumo mais consciente e um setor mais sustentável. 
-											<br>
-											O aplicativo DO PASTO AO PRATO resolve esta falta de transparência, de duas maneiras:
-												
+											</p>
+										</div>
+									</details>
+								</main>
+								<main>
+  									<details>
+											<summary>Por que a transparência na cadeia produtiva da carne é relevante?</summary>
+										<div class="faq__content">
+											<p>
+												<b>De onde vem a carne que você come?</b> <br>
+													O setor da pecuária ainda é culpado pelo desmatamento, queimadas, trabalho escravo e casos de má higiene e bem estar animal. <br>
+													Estes danos são escondidos do consumidor por cadeias de abastecimento complexas, impedindo o avanço de um consumo mais consciente e um setor mais sustentável. <br>
+													O aplicativo DO PASTO AO PRATO resolve esta falta de transparência, de duas maneiras:												
 												<ol>
 													<li> O aplicativo disponibiliza informação sobre a origem e impacto do produto ao consumidor, apoiando escolhas informadas na ponta de compra.</li> 
 													<li> O uso do aplicativo gera um banco de dados públicos sobre o fluxo de produtos dentro do país, da origem até a ponta de venda.</li> 
 												</ol>
-										</br>
-									</div>
+											</br>
+										</div>
+									</details>
+								</main>
 								</div>
-								<br>
-								<!-- Accordion Item 04 -->
-								<div class="item">
-									<div class="btn btn-s btn-outline">
-										<h3 data-toggle="collapse" data-parent="#gstAccordion" href="#gstAccordion5">
-											Como baixar o aplicativo?
-										</h3>
-									</div>
-									<div id="gstAccordion5" class="collapse accordion-block">
-										<p>
-											O aplicativo pode ser obtido para <br>
-											<li>Android no link [] </li>
-											<li>Ou em breve na Apple Store no link [].</li>
-										</p>
-									</div>
-								</div>
-								<br>
-								<!-- Accordion Item 06 -->
-								<div class="item">
-									<div class="btn btn-s btn-outline">
-										<h3 data-toggle="collapse" data-parent="#gstAccordion" href="#gstAccordion7">
-											Como serão usados os dados coletados?
-										</h3>
-									</div>
-									<div id="gstAccordion7" class="collapse accordion-block">
-										<p>
+								<main>
+  									<details>
+											<summary>Como baixar o aplicativo?</summary>
+										<div class="faq__content">
+											<p>
+												O aplicativo pode ser obtido para <br>
+												<li>Android no link [] </li>
+												<li>Ou em breve na Apple Store no link [].</li>
+											</p>
+										</div>
+									</details>
+								</main>
+								<main>
+  									<details>
+											<summary>Como serão usados os dados coletados?</summary>
+										<div class="faq__content">
+											<p>
 											<b>DO PASTO AO PRATO é, acima de tudo, uma iniciativa de transparência. </b><br><br>
 											Os dados gerados pelos usuários do aplicativo sobre a cadeia de abastecimento, conectando a origem da produção até os pontos de venda, serão divulgados no website do projeto: https://dopastoaoprato.com.br. <br><br>
 											Os dados disponibilizados pelo aplicativo irão informar pesquisas sobre como os produtos com alto impacto socioambiental se propagam nas cadeias de abastecimento em todo o país, e facilitarão iniciativas sustentáveis de engajamento com redes de supermercados e o setor de pecuária. <br><br>
 											DO PASTO AO PRATO é colaborativo. Sabemos que a formação de um banco de dados inédito, conectando o local de produção ao ponto de venda, só seria possível com a participação de muitos colaboradores. Queremos que esse reconhecimento seja passado para os produtos gerados com essa base de dados. No futuro contactaremos, por email, os colaboradores ativos quanto à sua intenção em ser citado como autor da base de dados, para que possamos citá-los devidamente nos produtos derivados dessas informações.
-										</p>
-									</div>
-								</div>
-								<br>
-								<!-- Accordion Item 07 -->
-								<div class="item">
-									<div class="btn btn-s btn-outline">
-										<h3 data-toggle="collapse" data-parent="#gstAccordion" href="#gstAccordion8">
-											Os dados dos usuários estarão protegidos?
-										</h3>
-									</div>
-									<div id="gstAccordion8" class="collapse accordion-block">
+											</p>
+										</div>
+									</details>
+								</main>
+								<main>
+  									<details>
+											<summary>Os dados dos usuários estarão protegidos?</summary>
+									<div class="faq__content">
 										<p>
 											Como descrito em nossa política de privacidade, DO PASTO AO PRATO é um aplicativo sem fins lucrativos e garantimos que sua informação pessoal (nome, detalhes de contato) nunca será compartilhada com outros parceiros.<br><br>
 											Os dados sobre o fluxo de produtos (de frigoríficos até prateleiras do mercado) serão publicados de uma maneira agregada, e nunca serão ligados a nenhuma conta ou usuário. Os resultados das análises serão publicados em artigos científicas e na mídia (blogs, jornais). 
 										</p>
 									</div>
-								</div>
-								<br>
-								<!-- Accordion Item 08 -->
-								<div class="item">
-									<div class="btn btn-s btn-outline">
-										<h3 data-toggle="collapse" data-parent="#gstAccordion" href="#gstAccordion9">
-											Quem é a equipe por trás do aplicativo?
-										</h3>
-									</div>
-									<div id="gstAccordion9" class="collapse accordion-block">
+									</details>
+								</main>
+								<main>
+  									<details>
+											<summary>Quem é a equipe por trás do aplicativo?</summary>
+									<div class="faq__content">
 										<p>
-											Este aplicativo foi desenvolvido pela iniciativa Trase: https://www.trase.earth/?lang=PT_BR. <br><br>
+											Este aplicativo foi desenvolvido pela iniciativa <a href="https://www.trase.earth/?lang=PT_BR.">Trase</a> <br><br>
 											Trase é composta por uma equipe de cientistas distribuídos em vários países, com o objetivo principal de melhorar a transparência das cadeias alimentares de suprimentos e ajudar consumidores a ampliarem a compreensão  do impacto de suas escolhas para o meio ambiente. <br><br>
 											Nós ainda contamos com o apoio da ONG Repórter Brasil, que trabalha com o objetivo de fomentar a reflexão e a ação sobre a violação aos direitos fundamentais dos povos e trabalhadores no país. Também contamos com o apoio da Universidade Católica de Louvain (UCLouvain), na Bélgica, que desenvolve importantes pesquisas sobre o agronegócio sustentável e tópicos relacionados
 										</p>
 									</div>
-								</div>
-								<br>
-								<!-- Accordion Item 09 -->
-								<div class="item">
-									<div class="btn btn-s btn-outline">
-										<h3 data-toggle="collapse" data-parent="#gstAccordion" href="#gstAccordion10">
-										Quais são as próximas etapas do projeto? 
-										</h3>
-									</div>
-									<div id="gstAccordion10" class="collapse accordion-block">
+									</details>
+								</main>
+								<main>
+  									<details>
+										<summary>Quais são as próximas etapas do projeto? </summary>
+									<div class="faq__content">
 										<p>
 											O aplicativo vem sendo desenvolvido há meses pela equipe técnica e, em agosto de 2021, a versão beta começou a funcionar, com foco na carne bovina no Brasil. <br> Já estamos desenvolvendo uma versão expandida para incluir dados relacionados a frango e porco. <br>
 											No futuro, queremos expandir para outros países e produtos, usando o mesmo conceito lançado inicialmente no Brasil.<br><br>
 											Tem ideias ou quer ver outros produtos incluídos no projeto? Envie um email para: dopastoaoprato@trase.earth.
 										</p>
 									</div>
-								</div>
+									</details>
+								</main>
 								<br>
-								<!-- Accordion Item 10 -->
-								<div class="item">
-									<h4>
-										INDICADORES NO APLICATIVO
-									</h4><br>
-									<div class="btn btn-s btn-outline">
-										<h3 data-toggle="collapse" data-parent="#gstAccordion" href="#gstAccordion11">
-											Quais indicadores estão incluídos?
-										</h3>
-									</div>
-									<div id="gstAccordion11" class="collapse accordion-block">
+								<h4> SOBRE OS INDICADORES </h4><br>
+								<main>
+  									<details>
+											<summary>Quais indicadores estão incluídos?</summary>
+									<div class="faq__content">
 										<p>
 											O número de multas pagas pelo frigorífico de onde se origina a carne, aplicadas em razão do desrespeito às normas de higiene e/ou bem-estar animal durante o processamento armazenamento e/ou o abate; 
 											<li>A área desmatada na zona de compra (onde eles fornecem gado) dos frigoríficos;</li>
@@ -237,16 +198,12 @@
 											<li>Estes indicadores estão descritos abaixo e no manual metodológico do aplicativo, disponível aqui.</li>
 										</p>
 									</div>
-								</div>
-								<br>
-								<!-- Accordion Item 11 -->
-								<div class="item">
-									<div class="btn btn-s btn-outline">
-										<h3 data-toggle="collapse" data-parent="#gstAccordion" href="#gstAccordion12">
-											Por que selecionamos esses indicadores?
-										</h3>
-									</div>
-									<div id="gstAccordion12" class="collapse accordion-block">
+									</details>
+								</main>
+								<main>
+  									<details>
+											<summary>Por que selecionamos esses indicadores?</summary>
+									<div class="faq__content">
 										<p>
 											Milhões de fazendas e milhares de empresas produzem e processam a carne para o seu consumo todos os dias. <br><br>
 											Embora muitas observem boas práticas sanitárias, ambientais e de bem-estar animal, a pecuária é responsável por 82% do desmatamento da Amazônia e 51% do Cerrado, segundo dados de Mapbiomas, e ainda existem casos de produtores associados a trabalho análogo à escravidão, queimadas e descumprimento das regras sanitárias. No aplicativo, damos transparência a esses impactos. <br><br>
@@ -254,45 +211,33 @@
 											Interessado em outros indicadores? Mande uma mensagem para o email dopastoaoprato@trase.earth.
 										</br>
 									</div>
-								</div>
-								<br>
-								<!-- Accordion Item 12 -->
-								<div class="item">
-									<div class="btn btn-s btn-outline">
-										<h3 data-toggle="collapse" data-parent="#gstAccordion" href="#gstAccordion13">
-											Quais são as fontes dos dados exibidos no aplicativo?										
-										</h3>
-									</div>
-									<div id="gstAccordion13" class="collapse accordion-block">
+									</details>
+								</main>
+								<main>
+  									<details>
+											<summary>Quais são as fontes dos dados exibidos no aplicativo?</summary>
+									<div class="faq__content">
 										<p>
 											Todos estes dados e o processamento deles são descritos no manual metodológico do aplicativo, <br>
 											disponível <a href="http://resources.trase.earth/documents/metodo_do_pasto_ao_prato.pdf"> aqui </a> 
 										</p>
 									</div>
-								</div>
-								<br>
-								<!-- Accordion Item 13 -->
-								<div class="item">
-									<div class="btn btn-s btn-outline">
-										<h3 data-toggle="collapse" data-parent="#gstAccordion" href="#gstAccordion14">
-											Todos os dados são públicos?										
-										</h3>
-									</div>
-									<div id="gstAccordion14" class="collapse accordion-block">
+									</details>
+								</main>
+								<main>
+  									<details>
+											<summary>Todos os dados são públicos?</summary>
+									<div class="faq__content">
 										<p>
 											Sim, o aplicativo somente resume e disponibiliza dados públicos sobre o setor agropecuário brasileiro.
 										</p>
 									</div>
-								</div>
-								<br>
-								<!-- Accordion Item 14 -->
-								<div class="item">
-									<div class="btn btn-s btn-outline">
-										<h3 data-toggle="collapse" data-parent="#gstAccordion" href="#gstAccordion15">
-											O que significa a área de desmatamento (ou queimada), em hectares? 
-										</h3>
-									</div>
-									<div id="gstAccordion15" class="collapse accordion-block">
+									</details>
+								</main>
+								<main>
+  									<details>
+											<summary>O que significa a área de desmatamento (ou queimada), em hectares? </summary>
+									<div class="faq__content">
 										<p>
 											Para calcular a área de desmatamento na zona de compra, associamos a origem do animal com a área de desmatamento nos municípios que fornecem esses animais, exemplificado da seguinte maneira: <br><br>
 											Para dois municípios que negociam com um determinado frigorífico, onde um deles forneceu 75% e o outro 25% dos animais abatidos, tomamos essa proporção para calcular o desmatamento final. <br>
@@ -301,24 +246,20 @@
 											Essas são estimativas de exposição, uma vez que os dados espacialmente explícitos da cadeia de fornecimento de cada frigorífico, ou seja, a localização dos fornecedores, ainda não são publicamente disponíveis. A equipe se compromete a rever os cálculos onde fornecedores possam apresentar melhores práticas de produção em seus fornecedores diretos e indiretos.
 										</p>
 									</div>
-								</div>
-								<br>
-								<!-- Accordion Item 15 -->
-								<div class="item">
-									<div class="btn btn-s btn-outline">
-										<h3 data-toggle="collapse" data-parent="#gstAccordion" href="#gstAccordion16">
-											Os dados são referentes a quais anos?
-										</h3>
-									</div>
-									<div id="gstAccordion16" class="collapse accordion-block">
+									</details>
+								</main>
+								<main>
+  									<details>
+											<summary>Os dados são referentes a quais anos?</summary>
+									<div class="faq__content">
 										<p>
 											Os dados cobrem os anos de 2016 até 2019.<br><br>
 											Há normalmente um atraso de um ano na divulgação dos dados oficiais (por exemplo, dados sobre o desmatamento de 2020 serão divulgados no fim de 2021). O aplicativo é uma ferramenta viva - quando dados mais recentes forem disponibilizados atualizaremos as informações do aplicativo.
 										</p>
 									</div>
-								</div>
+									</details>
+								</main>
 								<br>
-								<!-- Accordion Item 16 -->
 								<div class="item">
 									<h2>
 										Alguma outra dúvida?
