ainda precisando corrigir popup

--- a/faq.html
+++ b/faq.html
@@ -35,7 +35,7 @@
                         <span class="sr-only">Toggle navigation</span> Menu 
                         <i class="fa fa-bars"></i> 
                     </button>                     
-                   <a class="navbar-brand page-scroll" href="index.html" style="color: #40474e;">Do Pasto ao Prato</a>
+                   <a class="navbar-brand page-scroll" href="index.html">Do Pasto ao Prato</a>
                 </div>                 
                 <!-- Collect the nav links, forms, and other content for toggling -->                 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
@@ -45,12 +45,12 @@
                         </li>                         
                         <li> 
                             <a class="nav-link" href="index.html">O aplicativo</a> 
-                        </li>   
-						<li>
-                            <a class="nav-link" href="bd.html">Banco de dados</a>
                         </li>                           
                         <li> 
                             <a class="nav-link" href="index.html">Redes sociais</a> 
+                        </li>   
+						<li>
+                            <a class="nav-link" href="bd.html">Banco de dados</a>
                         </li>
                         <li>
                             <a class="nav-link" href="faq.html">FAQs</a>
