--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <span class="sr-only">Toggle navigation</span> Menu 
                         <i class="fa fa-bars"></i> 
                     </button>                     
-                    <a class="navbar-brand page-scroll" href="#page-top" style="color: #40474e;">Do Pasto ao Prato</a>
+                    <a class="navbar-brand page-scroll" href="#page-top">Do Pasto ao Prato</a>
                 </div>                 
                 <!-- Collect the nav links, forms, and other content for toggling -->                 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
@@ -45,13 +45,13 @@
                         </li>                         
                         <li> 
                             <a class="page-scroll" href="#features">O aplicativo</a> 
-                        </li>
-                        <li>
-                            <a class="page-scroll" href="#bd">Banco de dados</a>
                         </li>                            
                         <li> 
                             <a class="page-scroll" href="#contact">Redes sociais</a> 
                         </li>   
+                        <li>
+                            <a class="page-scroll" href="bd.html">Banco de dados</a>
+                        </li>
                         <li>
                             <a class="nav-link" href="faq.html">FAQs</a>
                         </li>                   
@@ -191,8 +191,8 @@
         <section id="bd" class="cta"> 
             <div class="cta-content"> 
                 <div class="container"> 
-                    <h2>Um banco de dados inédito, conectando frigoríficos aos mercados varejistas</h2> 
-                    <a href="bd.html" class="btn btn-outline btn-xl page-scroll">Em breve</a> 
+                    <h4>Em breve</h4> 
+                    <h4>um banco de dados inédito, conectando frigoríficos aos mercados varejistas</h4> 
                 </div>                 
             </div>             
             <div class="overlay"></div>             
