--- a/bd.html
+++ b/bd.html
@@ -95,6 +95,21 @@
         <!-- Plugin JavaScript -->         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>         
         <!-- Theme JavaScript -->         
-        <script src="js/new-age.min.js"></script>         
+        <script src="js/new-age.min.js"></script>  
+
+        <script type="text/javascript">
+            var _gauges = _gauges || [];
+            (function() {
+                var t   = document.createElement('script');
+                t.type  = 'text/javascript';
+                t.async = true;
+                t.id    = 'gauges-tracker';
+                t.setAttribute('data-site-id', '6114b282f9ceca57464c607c');
+                t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
+                t.src = 'https://d2fuc4clr7gvcn.cloudfront.net/track.js';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(t, s);
+            })();
+        </script>         
     </body>     
 </html>
